# NemoClaw

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.base  README.md  SECURITY.md  WRITING.md  auto_fix_result.json  biome.json  install.sh  muninn.yml  package-lock.json  package.json  spark-install.md  tsconfig.cli.json  vitest.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  dependabot.yml
agents/langchain-deepagents-code/profile-plugin/: .gitignore  pyproject.toml
agents/langchain-deepagents-code/profile-plugin/src/nemoclaw_deepagents_profile/: __init__.py
ci/: biome-diagnostic-budget.json  cli-test-timing-hints.json  coverage-threshold-cli.json  coverage-threshold-plugin.json  env-var-doc-allowlist.json  full-e2e-cold-path-calibration.json  legacy-sandbox-transports.json  onboard-performance-budget.json  platform-matrix.json  reviewed-npm-audit.json  reviewed-npm-lifecycle-allowlist.json  source-shape-test-budget.json  test-file-size-budget.json
docs/: AGENTS.md  CONTRIBUTING.md  index.mdx  index.yml  project.json  versions1.json
fern/: docs.yml  fern.config.json
nemoclaw/: package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.project.ts
nemoclaw-blueprint/: blueprint.yaml
schemas/: blueprint.schema.json  onboard-config.schema.json  policy-preset.schema.json  sandbox-policy.schema.json
scripts/: advisory-early-warning-scan.mts  audit-reviewed-npm-graph.mts  audit-test-runtime.mts  benchmark-sandbox-image-build.mts  bootstrap-windows.ps1  install.sh  (+59 more)
(+5084 files in other folders)
